# rust-hello-world-example

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  exportenv.sh
.github/: dependabot.yml
.mia-template/: README.md
src/: handlers.rs  main.rs  printer.rs  server.rs
