[package]
name = "mia_template_service_name_placeholder"
version = "0.1.2-alpha.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
actix-rt = "1.1.1"

bytes = "0.5"
futures = "0.3"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
envconfig = "0.9.1"
envconfig_derive = "0.9.1"
struct2swagger_derive = "0.1.6"
struct2swagger = "0.1.6"

[dev-dependencies]
actix-service = "1.0.6"
